# kpl-c

./: .clang-format  README.md  meson.build
include/kpl/: arena.h  assert.h  common.h  log.h  mem.h  random.h  string.h  timer.h
src/: kpl_alloc.c  kpl_arena.c  kpl_assert.c  kpl_log.c  kpl_mem.c  kpl_random.c  kpl_string.c  kpl_string_builder.c  kpl_timer.c
